--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,8 @@ commands:
     aliases: ["information"]
     description: "Información general del servidor"
   rank:
-    description: "Editor de rangos (solo administradores)"
+    description: Editor de rangos
+    permission-message: No tienes permiso para usar este comando
   go:
+    usage: /<command> [7-seg|alu|14-seg]
     description: "Comando para teletransortarse a lugares representativos"
