--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <!-- Plugin Information -->
     <name>ETSIIPlugin</name>
     <description>Plugin para gestionar el servidor relacionado con la electrónica en la ETSII (aún en fase de desarrollo)</description>
-    <version>0.1.1</version>
+    <version>0.3</version>
     <url>https://github.com/tonicraft18/ETSIIPlugin</url>
 
     <properties>
-        <author>tonicraft18_elgamesHD</author>
+        <author>tonicraft18_elgamesHD_alers16</author>
         <mainClass>dev.tc18.main.MainPlugin</mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
